# Forum

./: .gitignore  README.md  db.sqlite3  pyproject.toml
app_authentication/: admin.py  forms.py  models.py  urls.py
app_authentication/logic_auth/: logic_profile.py
app_authentication/migrations/: 0001_initial.py
app_authentication/templates/app_authentication/: login.html  profile_update.html  sing_up.html  user_profile.html
app_authentication/templates/includes/: navbar.html
app_authentication/views/: __init__.py  authentication.py  profile.py
app_forum/: admin.py  apps.py  forms.py  urls.py
app_forum/logic_forum/: __init__.py  logic_url.py
app_forum/migrations/: 0001_initial.py  0002_post_date_topic_date.py  0003_remove_post_time_remove_topic_time.py  0004_alter_post_topic.py  0005_post_author_topic_author.py  0006_groups.py  0007_topic_tag.py
app_forum/models/: __init__.py  post.py  topic.py
app_forum/templates/app_forum/: base.html  index.html
app_forum/templates/app_forum/manage_users/: manage_users.html
app_forum/templates/app_forum/posts/: create_post.html  delete_post.html  update_post.html
app_forum/templates/app_forum/tags/: tag.html
app_forum/templates/app_forum/topics/: create_topic.html  delete_topic.html  topic_posts.html  update_topic.html
app_forum/templates/includes/: navbar.html  pagination.html
app_forum/views/: __init__.py  manage_users.py  posts.py  tags.py  topic.py  topic_posts.py
project/: settings.py  urls.py
